--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "auto message another friends",
   "main": "index.js",
   "scripts": {
+    "go-sleep": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
