--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
